# SapiSales

./: CMakeLists.txt  README.md  main.c
sapi_sales/headers/binary_search_tree/: user_bst.h
sapi_sales/headers/list/: user_list.h
sapi_sales/headers/manager/: ProductArray.h  lab10.h  lab2.h  lab3.h  lab5.h  lab8.h  lab9.h  lab_manager.h  product_array.h  user_array.h
sapi_sales/headers/models/: product.h  user.h
sapi_sales/headers/queue/: user_queue.h
sapi_sales/headers/stack/: product_stack.h
sapi_sales/src/: main.c
sapi_sales/src/binary_search_tree/: user_bst.c
sapi_sales/src/list/: user_list.c
sapi_sales/src/manager/: ProductArray.c  lab10.c  lab2.c  lab3.c  lab5.c  lab8.c  lab9.c  lab_manager.c  product_array.c  user_array.c
sapi_sales/src/models/: product.c  user.c
sapi_sales/src/queue/: user_queue.c
sapi_sales/src/stack/: product_stack.c
shared/headers/: errors.h  messages.h
shared/src/: errors.c  messages.c
